// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "org/apache/kyuubi/grpc/common/errors.proto";
import "org/apache/kyuubi/grpc/jdbc/request.proto";
import "org/apache/kyuubi/grpc/jdbc/response.proto";

option java_multiple_files = true;
option java_package = "org.apache.kyuubi.grpc.jdbc";

/* Frontend Endpoint for building JDBC-compatible service through Grpc.
 */
service Jdbc {
  rpc GetCatalogs(GetCatalogsReq) returns (DirectStatusResp);
  rpc GetSchemas(GetSchemasReq) returns (DirectStatusResp);
  rpc GetTables(GetTablesReq) returns (DirectStatusResp);
  rpc GetTableTypes(GetTableTypesReq) returns (DirectStatusResp);
  rpc GetTablePrivileges(GetTablePrivilegesReq) returns (DirectStatusResp);
  rpc GetColumns(GetColumnsReq) returns (DirectStatusResp);
  rpc GetColumnPrivileges(GetColumnPrivilegesReq) returns (DirectStatusResp);
  rpc GetVersionColumns(GetVersionColumnsReq) returns (DirectStatusResp);
  rpc GetPseudoColumns(GetPseudoColumnsReq) returns (DirectStatusResp);
  rpc GetFunctions(GetFunctionsReq) returns (DirectStatusResp);
  rpc GetFunctionColumns(GetFunctionColumnsReq) returns (GetFunctionColumnsReq);
  rpc GetPrimaryKeys(GetPrimaryKeysReq) returns (DirectStatusResp);
  rpc GetImportedKeys(GetImportedKeysReq) returns (DirectStatusResp);
  rpc GetExportedKeys(GetImportedKeysReq) returns (DirectStatusResp);
  rpc GetCrossReference(GetCrossReferenceReq) returns (DirectStatusResp);
  rpc GetAttributes(GetAttributesReq) returns (DirectStatusResp);
  rpc GetBestRowIdentifier(GetBestRowIdentifierReq) returns (DirectStatusResp);
  rpc GetTypeInfo(GetTypeInfoReq) returns (DirectStatusResp);
  rpc GetIndexInfo(GetIndexInfoReq) returns (DirectStatusResp);
  rpc GetUDTs(GetUDTsReq) returns (DirectStatusResp);
  rpc GetSuperTypes(GetSuperTypesReq) returns (DirectStatusResp);
  rpc ExecuteSql(ExecuteSqlReq) returns (DirectStatusResp);
  rpc GetResultSetSchema(GetResultSetSchemaReq) returns (GetResultSetSchemaResp);
  rpc GetNextResultSet(GetNextColumnSet) returns (GetNextColumnSetResp);
}